[package]
edition = "2021"
name    = "m5stickc-plus-nostd"
version = "0.1.0"

[[bin]]
name = "m5stickc-plus-nostd"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "1.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-hal-async = "1.0.0"
axp192-dd = { version = "0.1", features = ["defmt", "async"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
